Fix low contrast in css code blocks
Issue #39967
First noticed on "Divide the Grid Into an Area Template", text is hard to read due to low contrast in the css code block. Problem was discussed in the related issue, and this change was proposed to boost contrast above the minimum acceptable ratio of 4.5:1.
References: https://github.com/freeCodeCamp/freeCodeCamp/issues/39967

--- a/client/static/css/prism.css
+++ b/client/static/css/prism.css
@@ -104,8 +104,8 @@
  .token.url,
  .language-css .token.string,
  .style .token.string {
-   color: #9a6e3a;
-   background: hsla(0, 0%, 100%, .5);
+   color: #ec9126;
+   background: hsla(0,0%,100%,.12);
  }
 
  .token.atrule,
